--- a/00-hello-world/src/index.css
+++ b/00-hello-world/src/index.css
@@ -9,6 +9,8 @@ html {
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 1.6rem;
+  width: 100dvw;
+  height: 100dvh;
 }
